force-app/main/default/objects/Int_Agreement_Payment_Schedule__c/Int_Agreement_Payment_Schedule__c.object-meta.xml
<CustomObject>
    <description>Int Agreement Payment Schedule</description>
    <label>Int Agreement Payment Schedule</label>
    <nameField>
        <displayFormat>APS-{0000000000}</displayFormat>
        <label>Agreement Payment Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Payment Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>