force-app/main/default/objects/Int_Agreement_Payment_Schedule__c/fields/Payment_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type_Code__c</fullName>
    <description>Payment Type Code</description>
    <label>Payment Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>