force-app/main/default/objects/Int_Agreement_Payment_Schedule__c/fields/Schedule_Amount__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Amount__c</fullName>
    <description>Schedule Amount</description>
    <label>Schedule Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>