force-app/main/default/objects/Int_Agreement_Payment_Schedule__c/fields/Schedule_Class__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Class__c</fullName>
    <description>Schedule Class</description>
    <label>Schedule Class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>