force-app/main/default/objects/Int_Agreement_Payment_Schedule__c/fields/Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start_Date__c</fullName>
    <description>Schedule Start Date</description>
    <label>Schedule Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>