force-app/main/default/objects/Int_Agreement_Payment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Schedule_Start_Date__c</columns>
    <columns>Payment_Type_Code__c</columns>
    <columns>Schedule_Amount__c</columns>
    <columns>Schedule_Class__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Agreement_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Agreement_Source_System__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>